--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -1,18 +1,18 @@
-@import 'base/base'
-@import 'base/helpers'
-@import 'base/typography'
-@import 'base/variables'
-@import 'components/icon'
-@import 'components/modal'
-@import 'components/toast'
-@import 'layout/form'
-@import 'layout/grid'
-@import 'layout/navigation'
-@import 'pages/about'
-@import 'pages/lost'
-@import 'pages/photo'
-@import 'pages/story'
-@import 'pages/stories'
+@use 'base/base'
+@use 'base/helpers'
+@use 'base/typography'
+@use 'base/variables'
+@use 'components/icon'
+@use 'components/modal'
+@use 'components/toast'
+@use 'layout/form'
+@use 'layout/grid'
+@use 'layout/navigation'
+@use 'pages/about'
+@use 'pages/lost'
+@use 'pages/photo'
+@use 'pages/story'
+@use 'pages/stories'
 
 /* Read ../fonts/asap/README.md */
 @font-face
