--- a/src/style/pages/_photo.sass
+++ b/src/style/pages/_photo.sass
@@ -1,4 +1,4 @@
-@import '../base/variables'
+@use '../base/variables'
 
 #gallery
     .goto-photo-screen-nav
@@ -17,22 +17,22 @@
         display: flex
         justify-content: center
         align-items: center
-        margin-top: calc(#{$nav-bar-height} * 3 / 2)
-        height: calc(100vh - 3 * #{$nav-bar-height} - 1px) /* vertical alignement */
-        $minimal-photo-margin: calc(#{$nav-bar-height} / 8)
-        $photo-description: calc(3 * #{$global-font-size} + 0.4rem) /* 1 line photo title + 1 line story title */
+        margin-top: calc(#{variables.$nav-bar-height} * 3 / 2)
+        height: calc(100vh - 3 * #{variables.$nav-bar-height} - 1px) /* vertical alignement */
+        $minimal-photo-margin: calc(#{variables.$nav-bar-height} / 8)
+        $photo-description: calc(3 * #{variables.$global-font-size} + 0.4rem) /* 1 line photo title + 1 line story title */
         img
-            max-width: calc(100vw - #{$nav-bar-height})
-            max-height: calc(100vh - 3 * #{$nav-bar-height} - 1px)
-            border-radius: $border-radius-sm
+            max-width: calc(100vw - #{variables.$nav-bar-height})
+            max-height: calc(100vh - 3 * #{variables.$nav-bar-height} - 1px)
+            border-radius: variables.$border-radius-sm
         @media (max-width: 1024px)
             img
                 max-width: calc(100vw - 2 * #{$minimal-photo-margin})
                 /* add extra nav bar height as quick fix https://stackoverflow.com/a/37113430 */
-                max-height: calc(100vh - 3 * (#{$nav-bar-height} + #{$minimal-photo-margin}) - #{$photo-description})
+                max-height: calc(100vh - 3 * (#{variables.$nav-bar-height} + #{$minimal-photo-margin}) - #{$photo-description})
         @media (max-width: 1024px) and (orientation: landscape)
             margin-top: $minimal-photo-margin
             height: calc(100vh - #{$photo-description} - 1.5 * #{$minimal-photo-margin})
             img
-                max-width: calc(100vw - 2.3 * #{$nav-bar-height})
+                max-width: calc(100vw - 2.3 * #{variables.$nav-bar-height})
                 max-height: 100%
