--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -1,24 +1,24 @@
-@import "variables"
+@use 'variables'
 
 body,
 html
-    line-height: $text-line-height
+    line-height: variables.$text-line-height
     -webkit-font-smoothing: antialiased
     -moz-osx-font-smoothing: grayscale
-    font-size: $global-font-size
+    font-size: variables.$global-font-size
     @media (max-width: 1024px)
-        font-size: calc(#{$global-font-size} / 1.15)
+        font-size: calc(#{variables.$global-font-size} / 1.15)
 
 h1
-    padding-top: $h1-padding-top
-    padding-bottom: $p-vertical-margin
-    line-height: $h1-line-height
-    font-size: $h1-font-size
-    color: $h1-color
-    border-bottom: $h1-border-bottom-width solid $h1-border-bottom-color
+    padding-top: variables.$h1-padding-top
+    padding-bottom: variables.$p-vertical-margin
+    line-height: variables.$h1-line-height
+    font-size: variables.$h1-font-size
+    color: variables.$h1-color
+    border-bottom: variables.$h1-border-bottom-width solid variables.$h1-border-bottom-color
     @media (max-width: 1024px)
-        padding-top: calc(#{$h1-padding-top} / 2)
-        font-size: calc(#{$h1-font-size} / 1.1)
+        padding-top: calc(#{variables.$h1-padding-top} / 2)
+        font-size: calc(#{variables.$h1-font-size} / 1.1)
 
 h3
     margin-top: 1.1rem
@@ -26,7 +26,7 @@ h3
     font-size: 1.2rem
 
 p
-    margin: $p-vertical-margin 0
+    margin: variables.$p-vertical-margin 0
 
 /* list in a text */
 ul.blabla
@@ -51,8 +51,8 @@ ul ul
     list-style: none
     padding-left: 1rem
     li::before
-        filter: $filter-grey
+        filter: variables.$filter-grey
 
 .tippy-box ul.blabla li::before,
 .tippy-box img.icon
-    filter: $filter-white
+    filter: variables.$filter-white
