--- a/src/style/components/_modal.sass
+++ b/src/style/components/_modal.sass
@@ -1,4 +1,4 @@
-@import '../base/variables'
+@use '../base/variables'
 
 .modal
     position: fixed
@@ -14,9 +14,9 @@
     .modal-box
         box-shadow: 0 0 3px rgba(0, 0, 0, 0.2)
         background-color: rgba(255, 255, 255, 1)
-        border-radius: 0 $border-radius-lg
+        border-radius: 0 variables.$border-radius-lg
         padding: 1rem
-        max-width: calc(min(930px, 100vw - 1rem))
+        max-width: calc(Min(930px, 100vw - 1rem))
         margin: auto
         @media (max-width: 1024px)
             padding: 1rem 0.5rem 0.5rem
