--- a/src/style/components/_toast.sass
+++ b/src/style/components/_toast.sass
@@ -1,10 +1,10 @@
-@import '../base/variables'
+@use '../base/variables'
 
 .toastify
     padding: 2px 8px !important /* override */
     max-width: calc(100% - 20px) !important /* override */
-    color: $body-color !important /* override */
-    border-radius: 0 $border-radius-lg
+    color: variables.$body-color !important /* override */
+    border-radius: 0 variables.$border-radius-lg
     .toast-close
         padding: 0 0 0 8px !important /* override */
         color: #000 !important /* override */
