--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -1,11 +1,11 @@
-@import '../base/variables'
+@use '../base/variables'
 
 header,
 footer
     nav
         box-shadow: 0 0 3px rgba(51, 51, 51, 0.46)
         position: absolute
-        background-color: $nav-bg-color
+        background-color: variables.$nav-bg-color
         z-index: 10
         width: 100%
         display: flex
@@ -21,8 +21,8 @@ footer
             @media (max-width: 1024px)
                 .photo-page-header
                     display: block
-                    margin-top: $nav-item-space
-                    padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2) 0 0 0
+                    margin-top: variables.$nav-item-space
+                    padding: variables.$nav-item-space calc(#{variables.$nav-item-space} * 3 / 2) 0 0 0
                     position: absolute
                     text-align: center
                     color: #000
@@ -35,17 +35,17 @@ footer
                             text-decoration: #000 underline
                 @media (orientation: landscape)
                     top: 0
-                    width: calc(#{$nav-bar-height} + 2px)
+                    width: calc(#{variables.$nav-bar-height} + 2px)
                     flex-direction: column
                     height: 100vh
                     .photo-page-header
                         bottom: 0.3rem
-                        left: calc(#{$nav-bar-height} + 4px) /* 4px to keep distance from the shadow on the nav bar */
-                        width: calc(100vw - 2 * (#{$nav-bar-height} + 4px))
+                        left: calc(#{variables.$nav-bar-height} + 4px) /* 4px to keep distance from the shadow on the nav bar */
+                        width: calc(100vw - 2 * (#{variables.$nav-bar-height} + 4px))
                         padding-bottom: 0.2rem
                 @media (orientation: portrait)
                     .photo-page-header
-                        top: $nav-bar-height
+                        top: variables.$nav-bar-height
                         left: 0
                         width: 100vw
             .flex-sides
@@ -64,31 +64,31 @@ footer
             .short-item
                 display: inherit
         .nav-item
-            margin: $nav-item-space
-            padding: $nav-item-space calc(#{$nav-item-space} * 3 / 2)
+            margin: variables.$nav-item-space
+            padding: variables.$nav-item-space calc(#{variables.$nav-item-space} * 3 / 2)
             display: inline-block
-            font-size: $nav-font-size
+            font-size: variables.$nav-font-size
             align-items: center
             &.must-fit
                 @media (max-width: 1024px)
                     /* padding and margin to minimum to avoid flex wrap */
                     padding: 0 0.4rem
-                    margin: calc(#{$nav-item-space} * 2 * 1.25) 0 0 0
-                    font-size: calc(#{$nav-font-size} / 1.25)
+                    margin: calc(#{variables.$nav-item-space} * 2 * 1.25) 0 0 0
+                    font-size: calc(#{variables.$nav-font-size} / 1.25)
             .icon
-                filter: $filter-body-color
-                height: $nav-icon-size
-                vertical-align: calc(#{$nav-font-size} - #{$nav-icon-size} + 1.5px)
+                filter: variables.$filter-body-color
+                height: variables.$nav-icon-size
+                vertical-align: calc(#{variables.$nav-font-size} - #{variables.$nav-icon-size} + 1.5px)
             &[tabindex='0']
                 cursor: default
                 transition: all 0.2s ease-in
-                border-radius: 0 $border-radius-lg
+                border-radius: 0 variables.$border-radius-lg
                 &:focus
-                    outline: 1px solid $nav-hover-bg-color
+                    outline: 1px solid variables.$nav-hover-bg-color
         .menu-item
             @media (max-width: 1024px) and (orientation: landscape)
                 display: inline-block
-                width: $nav-bar-height
+                width: variables.$nav-bar-height
         .album-pagination
             cursor: help
             text-align: center
@@ -105,11 +105,11 @@ footer
                     display: block
         a:not(.normal-a)
             text-decoration: #2e8f6b underline
-            color: $body-color !important
-            border-radius: 0 $border-radius-lg
+            color: variables.$body-color !important
+            border-radius: 0 variables.$border-radius-lg
             &:hover,
             &:focus
-                background-color: $nav-hover-bg-color
+                background-color: variables.$nav-hover-bg-color
                 text-decoration: rgba(255, 255, 255, 0.37) underline
 
 .tippy-box[data-theme~='dropdown-list']
@@ -128,10 +128,10 @@ footer
                 color: #fff !important
                 display: block
                 text-decoration: none
-                border: 1px solid $body-color
+                border: 1px solid variables.$body-color
                 &:hover,
                 &:focus
-                    background-color: $body-color
+                    background-color: variables.$body-color
                     border: 1px solid #fff
 
 header nav
