--- a/src/style/pages/_photo.sass
+++ b/src/style/pages/_photo.sass
@@ -1,5 +1,8 @@
 @use '../base/variables'
 
+$minimal-photo-margin: calc(#{variables.$nav-bar-height} / 8)
+$photo-description: calc(3 * #{variables.$global-font-size} + 0.4rem) /* 1 line photo title + 1 line story title */
+
 #gallery
     .goto-photo-screen-nav
         position: absolute
@@ -16,22 +19,26 @@
     #current-photo
         display: flex
         justify-content: center
-        align-items: center
-        margin-top: calc(#{variables.$nav-bar-height} * 3 / 2)
-        height: calc(100vh - 3 * #{variables.$nav-bar-height} - 1px) /* vertical alignment */
-        $minimal-photo-margin: calc(#{variables.$nav-bar-height} / 8)
-        $photo-description: calc(3 * #{variables.$global-font-size} + 0.4rem) /* 1 line photo title + 1 line story title */
         img
-            max-width: calc(100vw - #{variables.$nav-bar-height})
-            max-height: calc(100vh - 3 * #{variables.$nav-bar-height} - 1px)
             border-radius: variables.$border-radius-sm
-        @media (max-width: 1024px)
-            margin-top: calc(#{variables.$nav-bar-height} + #{$photo-description})
-            height: calc(100vh - 2 * #{variables.$nav-bar-height} - #{$photo-description} - #{$minimal-photo-margin})
+    @media not (max-width: 1024px)
+        #current-photo
+            align-items: center
+            margin-top: calc(#{variables.$nav-bar-height} * 3 / 2)
+            height: calc(100vh - 3 * #{variables.$nav-bar-height} - 1px)
+            img
+                max-width: calc(100vw - #{variables.$nav-bar-height})
+                max-height: calc(100vh - 3 * #{variables.$nav-bar-height} - 1px)
+    @media (max-width: 1024px) and (not (orientation: landscape))
+        #current-photo
+            $margin-top: calc(#{variables.$nav-bar-height} + #{$photo-description} + #{$minimal-photo-margin})
+            margin-top: $margin-top
             img
                 max-width: calc(100vw - 2 * #{$minimal-photo-margin})
-                max-height: 100%
-        @media (max-width: 1024px) and (orientation: landscape)
+                max-height: calc(100vh - #{$margin-top} - (#{variables.$nav-bar-height} + #{$minimal-photo-margin}))
+    @media (max-width: 1024px) and (orientation: landscape)
+        #current-photo
+            align-items: center
             margin-top: $minimal-photo-margin
             height: calc(100vh - #{$photo-description} - 1.5 * #{$minimal-photo-margin})
             img
