--- a/src/style/layout/_form.sass
+++ b/src/style/layout/_form.sass
@@ -50,3 +50,8 @@ input:not([type='radio']):not([type='checkbox'])
         box-shadow: 0 0 2px rgba(83, 83, 83, 0.46)
     &:focus
         outline: none /* reset */
+
+textarea
+    border: 1px solid #979797
+    padding: 0.25rem
+    min-height: calc(#{variables.$global-font-size} * 3 + 1rem)
