--- a/src/style/main.sass
+++ b/src/style/main.sass
@@ -2,6 +2,7 @@
 @use 'base/helpers'
 @use 'base/typography'
 @use 'base/variables'
+@use 'components/feedback'
 @use 'components/icon'
 @use 'components/modal'
 @use 'components/toast'
