--- a/src/style/base/_variables.sass
+++ b/src/style/base/_variables.sass
@@ -19,7 +19,7 @@ $h1-border-bottom-color: #dfe1db
 $text-line-height: 1.6
 $block-space: 2rem
 $button-background: #338956
-$button-background-hover: #29593d
+$button-background-hover: #122b1f
 $container-column-threshold: 1000px
 
 /* hex to filter converter: https://codepen.io/sosuke/pen/Pjoqqp */
