improve photo metadata

--- a/src/style/base/_helpers.sass
+++ b/src/style/base/_helpers.sass
@@ -3,6 +3,9 @@
 .mr-3
     margin-right: 0.3rem !important
 
+.mr-9
+    margin-right: 0.9rem !important
+
 .ml-3
     margin-left: 0.3rem !important
 
