--- a/src/style/base/_typography.sass
+++ b/src/style/base/_typography.sass
@@ -47,6 +47,11 @@ ul.blabla
             height: 12px
             padding: 0 18px 0 0
 
+ul.no-bullets
+    li::before
+        background-image: none
+        padding: 0
+
 ul ul
     list-style: none
     padding-left: 1rem
