--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -142,3 +142,13 @@ footer nav
         @media (max-width: 1024px) and (orientation: landscape)
             /* avoid scroll bar to appear */
             right: 2px
+            .next-photo-next-story
+                writing-mode: vertical-rl
+            /* to fit the vertical text */
+            .nav-item:not(:first-child)
+                margin-top: 0
+            .nav-item:not(:last-child)
+                margin-bottom: 0
+        @media (max-width: 1024px)
+            .next-photo-next-story
+                font-size: calc(#{variables.$nav-font-size} / 1.4)
