--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -33,8 +33,8 @@ a:visited {
 
     a:hover,
     a:focus {
-        color: #fff;
-        text-decoration: #fff underline;
+        color: #fff !important;
+        text-decoration: #fff underline !important;
     }
 }
 
