--- a/src/style/components/_feedback.scss
+++ b/src/style/components/_feedback.scss
@@ -26,7 +26,7 @@
 
     .close-feedback,
     .open-feedback {
-        color: #000 !important;
+        color: #000;
         background: #fff;
         box-shadow: none;
         padding: 0 0.5rem;
