--- a/src/style/components/_modal.scss
+++ b/src/style/components/_modal.scss
@@ -55,7 +55,7 @@
             }
 
             .icon {
-                margin: 0 !important;
+                margin: 0;
             }
         }
 
