--- a/src/style/pages/_about.scss
+++ b/src/style/pages/_about.scss
@@ -48,7 +48,7 @@ section#about {
     }
 
     input {
-        width: 350px !important;
-        margin-bottom: 0 !important;
+        width: 350px;
+        margin-bottom: 0;
     }
 }
