--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -14,8 +14,7 @@ a:visited {
 }
 
 .tippy-box {
-    box-shadow: 2px 2px 3px rgba(51 51 51 / 46%) !important;
-    border: 0 !important;
+    box-shadow: 2px 2px 3px rgba(51 51 51 / 46%);
 
     &[data-placement^="top"]:not([data-theme~="abbr"]) {
         bottom: 0.3rem;
@@ -33,8 +32,8 @@ a:visited {
 
     a:hover,
     a:focus {
-        color: #fff !important;
-        text-decoration: #fff underline !important;
+        color: #fff;
+        text-decoration: #fff underline;
     }
 }
 
