--- a/src/style/layout/_navigation.scss
+++ b/src/style/layout/_navigation.scss
@@ -113,10 +113,6 @@ footer {
             }
         }
 
-        .long-item {
-            display: inherit;
-        }
-
         .short-item {
             display: none;
         }
@@ -127,7 +123,7 @@ footer {
             }
 
             .short-item {
-                display: inherit;
+                display: inline-block;
             }
         }
 
