style cleanup: use class instead of id

--- a/src/style/pages/_about.scss
+++ b/src/style/pages/_about.scss
@@ -1,6 +1,6 @@
 @use "../base/variables";
 
-section#about {
+section.about {
     margin-top: variables.$nav-bar-height;
     overflow-y: auto;
     height: calc(100vh - #{variables.$nav-bar-height});
