--- a/src/style/pages/_photo.scss
+++ b/src/style/pages/_photo.scss
@@ -3,7 +3,7 @@
 $minimal-photo-margin: calc(#{variables.$nav-bar-height} / 8);
 $photo-description: calc(3 * #{variables.$global-font-size} + 0.4rem); /* 1 line photo title + 1 line story title */
 
-#gallery {
+.gallery {
     .goto-photo-screen-nav {
         position: absolute;
         z-index: 1;
@@ -22,7 +22,7 @@ $photo-description: calc(3 * #{variables.$global-font-size} + 0.4rem); /* 1 line
         }
     }
 
-    #current-photo {
+    .current-photo {
         display: flex;
         justify-content: center;
 
@@ -32,7 +32,7 @@ $photo-description: calc(3 * #{variables.$global-font-size} + 0.4rem); /* 1 line
     }
 
     @media not (width <= 1024px) {
-        #current-photo {
+        .current-photo {
             align-items: center;
             margin-top: calc(#{variables.$nav-bar-height} * 3 / 2);
             height: calc(100vh - 3 * #{variables.$nav-bar-height} - 1px);
@@ -45,7 +45,7 @@ $photo-description: calc(3 * #{variables.$global-font-size} + 0.4rem); /* 1 line
     }
 
     @media (width <= 1024px) and (not (orientation: landscape)) {
-        #current-photo {
+        .current-photo {
             $margin-top: calc(#{variables.$nav-bar-height} + #{$photo-description} + #{$minimal-photo-margin});
 
             margin-top: $margin-top;
@@ -58,7 +58,7 @@ $photo-description: calc(3 * #{variables.$global-font-size} + 0.4rem); /* 1 line
     }
 
     @media (width <= 1024px) and (orientation: landscape) {
-        #current-photo {
+        .current-photo {
             align-items: center;
             margin-top: $minimal-photo-margin;
             height: calc(100vh - #{$photo-description} - 1.5 * #{$minimal-photo-margin});
