--- a/src/style/components/_feedback.scss
+++ b/src/style/components/_feedback.scss
@@ -7,10 +7,14 @@
     top: variables.$nav-bar-height;
     right: 1rem;
 
-    @media (width <= 1024px) and (orientation: landscape) {
+    @media (width <= 1024px) {
         margin-top: 0.4rem;
         top: 0;
         right: calc(#{variables.$nav-bar-height} + 0.7rem);
+    }
+
+    @media (width <= 400px) {
+        right: calc(#{variables.$nav-bar-height} - 0.3rem);
     }
 
     &.open-feedback-block {
